--- a/css/styles.css
+++ b/css/styles.css
@@ -1,11 +1,11 @@
 @charset "utf-8";
 /* CSS Document */
 
-body,td,th,p{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+body, td, th, p{
+	font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  line-height: 1.2rem;
 	color: #333;
-	line-height: 1.5;
 }
 body {
 	background-color: #fdfdfd;
@@ -13,8 +13,9 @@ body {
 	position:relative;
 }
 ul, li {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 10pt;
+	font-family: 'Open Sans', sans-serif;
+  font-size: 1rem;
+  line-height: 1.2rem;
 	color: #333;
 }
 a {
@@ -29,8 +30,16 @@ a img{
 	border: none 0px #fff;
 }
 h1, h2, h3, h4, h5, h6 {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand', sans-serif;
   margin: 0 0 20px;
+}
+h1 {
+  line-height: 1.45rem;
+  font-size: 1.25rem;
+}
+h2 {
+  line-height: 1.4rem;
+  font-size: 1.2rem;
 }
 article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 	display: block;
@@ -60,7 +69,6 @@ nav h1 {
 }
 nav h1 a {
   color: #fff;
-  font-size: 14pt;
   font-weight: 200;
   letter-spacing: 10px;
   text-transform: uppercase;
@@ -69,7 +77,6 @@ nav h1 a {
     padding: 10px 40px 16px;
     list-style: none;
     background-color: #eee;
-    font-size: 17px;
     margin: 0;
     width: calc(50% - 80px);
 }
@@ -112,7 +119,6 @@ nav h1 a {
 }
 .filter-options h2 {
   color: white;
-  font-size: 1rem;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
@@ -120,8 +126,6 @@ nav h1 a {
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
-  font-family: Arial,sans-serif;
-  font-size: 11pt;
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
@@ -140,7 +144,6 @@ nav h1 a {
 #restaurants-list li {
   background-color: #fff;
   border: 2px solid #ccc;
-  font-family: Arial,sans-serif;
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
@@ -157,24 +160,21 @@ nav h1 a {
 }
 #restaurants-list li h1 {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 14pt;
   font-weight: 200;
   letter-spacing: 0;
-  line-height: 1.3;
+  line-height: 1.35rem;
+  font-size: 1.15rem;
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
 #restaurants-list p {
   margin: 0;
-  font-size: 11pt;
 }
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
-  font-size: 10pt;
   margin: 15px 0 0;
   padding: 8px 30px 10px;
   text-align: center;
@@ -209,8 +209,7 @@ nav h1 a {
 }
 #restaurant-name {
   color: #f18200;
-  font-family: Arial,sans-serif;
-  font-size: 20pt;
+  font-family: 'Quicksand', sans-serif;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
@@ -221,13 +220,11 @@ nav h1 a {
 	width: 90%;
 }
 #restaurant-address {
-  font-size: 12pt;
   margin: 10px 0px;
 }
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
-  font-size: 12pt;
   font-weight: 300;
   letter-spacing: 10px;
   margin: 0 0 20px;
@@ -247,7 +244,6 @@ nav h1 a {
 }
 #reviews-container h2 {
   color: #f58500;
-  font-size: 24pt;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
