fix: show the map properly
After flexbox support was added, maps weren't rendering correctly. Now maps render correctly.

--- a/css/styles.css
+++ b/css/styles.css
@@ -117,6 +117,10 @@ nav h1 a {
   width: 100%;
   background-color: #ccc;
 }
+#map-container {
+  height: 400px;
+  width: 100%;
+}
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
