--- a/css/styles.css
+++ b/css/styles.css
@@ -124,9 +124,9 @@ nav h1 a {
 /* ====================== Restaurant Filtering ====================== */
 .filter-options {
   width: 100%;
-  height: 50px;
+  padding: 25px 0px;
+  text-align: center;
   background-color: #3397DB;
-  align-items: center;
 }
 .filter-options h2 {
   color: white;
@@ -140,7 +140,6 @@ nav h1 a {
   height: 35px;
   letter-spacing: 0;
   margin: 10px;
-  padding: 0 10px;
   width: 200px;
 }
 
