--- a/css/styles.css
+++ b/css/styles.css
@@ -55,6 +55,7 @@ img, embed, object, video {
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
+  min-width: 375px;
   display: flex;
   flex-wrap: wrap;
 }
@@ -69,6 +70,7 @@ img, embed, object, video {
 }
 /* ====================== Navigation ====================== */
 nav {
+  min-width: 375px;
   width: 100%;
   height: 100px;
   display: flex;
