fix: adapt to CSS guidelines
Add a blank line between rules, use double quotation marks, and use a new line for each selector.

--- a/css/styles.css
+++ b/css/styles.css
@@ -6,52 +6,87 @@
   padding: 0px;
 }
 
-body, td, th, p{
-	font-family: 'Open Sans', sans-serif;
+body,
+td,
+th,
+p {
+	font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   line-height: 1.2rem;
 	color: #333;
 }
+
 body {
 	background-color: #fdfdfd;
 	margin: 0;
 	position:relative;
 }
-ul, li {
-	font-family: 'Open Sans', sans-serif;
+
+ul,
+li {
+	font-family: "Open Sans", sans-serif;
   font-size: 1rem;
   line-height: 1.2rem;
 	color: #333;
 }
+
 a {
 	color: orange;
 	text-decoration: none;
 }
-a:hover, a:focus {
+
+a:hover,
+a:focus {
 	color: #3397db;
 	text-decoration: none;
 }
-a img{
+
+a img {
 	border: none 0px #fff;
 }
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Quicksand', sans-serif;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Quicksand", sans-serif;
   margin: 0 0 20px;
 }
+
 h1 {
   line-height: 1.45rem;
   font-size: 1.25rem;
 }
+
 h2 {
   line-height: 1.4rem;
   font-size: 1.2rem;
 }
-article, aside, canvas, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+
+article,
+aside,
+canvas,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
-img, embed, object, video {
+
+img,
+embed,
+object,
+video {
   max-width: 100%;
 }
+
 #maincontent {
   background-color: #f3f3f3;
   min-height: 100%;
@@ -59,6 +94,7 @@ img, embed, object, video {
   display: flex;
   flex-wrap: wrap;
 }
+
 #footer {
   background-color: #444;
   color: #aaa;
@@ -68,6 +104,7 @@ img, embed, object, video {
   text-align: center;
   text-transform: uppercase;
 }
+
 /* ====================== Navigation ====================== */
 nav {
   min-width: 375px;
@@ -76,10 +113,12 @@ nav {
   display: flex;
   background-color: #252831;
 }
+
 nav h1 {
   text-align: center;
   margin: auto;
 }
+
 nav h1 a {
   color: #fff;
   font-weight: 200;
@@ -87,6 +126,7 @@ nav h1 a {
   padding: 0 20px;
   text-transform: uppercase;
 }
+
 #breadcrumb {
     padding: 10px 40px 16px;
     list-style: none;
@@ -118,32 +158,38 @@ nav h1 a {
     color: #01447e;
     text-decoration: underline;
 }
+
 /* ====================== Map ====================== */
 #map {
   height: 400px;
   width: 100%;
   background-color: #ccc;
 }
+
 #map-container {
   height: 400px;
   width: 100%;
 }
+
 /* ====================== Restaurant Filtering ====================== */
 #filter {
   width: 100%;
 }
+
 .filter-options {
   width: 100%;
   padding: 25px 0px;
   text-align: center;
   background-color: #3397DB;
 }
+
 .filter-options h2 {
   color: white;
   font-weight: normal;
   line-height: 1;
   margin: 0 20px;
 }
+
 .filter-options select {
   background-color: white;
   border: 1px solid #fff;
@@ -160,6 +206,7 @@ nav h1 a {
   text-align: center;
   margin: 15px 0;
 }
+
 #restaurants-list li {
   min-height: 380px;
   width: 375px;
@@ -168,9 +215,11 @@ nav h1 a {
   background-color: #fff;
   box-shadow: 0 1px 10px 0px rgba(151, 151, 151, 0.712);
 }
+
 #restaurants-list li:last-of-type {
   margin: 0 auto;
 }
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
@@ -179,6 +228,7 @@ nav h1 a {
   min-height: 248px;
   min-width: 100%;
 }
+
 #restaurants-list li h1 {
   color: #f18200;
   font-weight: 200;
@@ -188,9 +238,11 @@ nav h1 a {
   margin: 20px 0 10px;
   text-transform: uppercase;
 }
+
 #restaurants-list p {
   margin: 0;
 }
+
 #restaurants-list li a {
   background-color: orange;
   border-bottom: 3px solid #eee;
@@ -210,6 +262,7 @@ nav h1 a {
   width: 100%;
   z-index: 1000;
 }
+
 .inside #map-container {
   background: blue none repeat scroll 0 0;
   height: 87%;
@@ -218,31 +271,37 @@ nav h1 a {
   top: 80px;
   width: 50%;
 }
+
 .inside #map {
   background-color: #ccc;
   height: 100%;
   width: 100%;
 }
+
 .inside #footer {
   bottom: 0;
   position: absolute;
   width: 50%;
 }
+
 #restaurant-name {
   color: #f18200;
-  font-family: 'Quicksand', sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-weight: 200;
   letter-spacing: 0;
   margin: 15px 0 30px;
   text-transform: uppercase;
   line-height: 1.1;
 }
+
 #restaurant-img {
 	width: 90%;
 }
+
 #restaurant-address {
   margin: 10px 0px;
 }
+
 #restaurant-cuisine {
   background-color: #333;
   color: #ddd;
@@ -254,25 +313,30 @@ nav h1 a {
   text-transform: uppercase;
 	width: 90%;
 }
+
 #restaurant-container, #reviews-container {
   border-bottom: 1px solid #d9d9d9;
   border-top: 1px solid #fff;
   padding: 140px 40px 30px;
   width: 50%;
 }
+
 #reviews-container {
   padding: 30px 40px 80px;
 }
+
 #reviews-container h2 {
   color: #f58500;
   font-weight: 300;
   letter-spacing: -1px;
   padding-bottom: 1pt;
 }
+
 #reviews-list {
   margin: 0;
   padding: 0;
 }
+
 #reviews-list li {
   background-color: #fff;
     border: 2px solid #f3f3f3;
@@ -284,9 +348,11 @@ nav h1 a {
   position: relative;
   width: 85%;
 }
+
 #reviews-list li p {
   margin: 0 0 10px;
 }
+
 #restaurant-hours td {
   color: #666;
 }
