--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 @charset "utf-8";
 /* CSS Document */
 
+/* ====================== General ====================== */
 * {
   margin: 0px;
   padding: 0px;
