--- a/css/styles_medium.css
+++ b/css/styles_medium.css
@@ -19,6 +19,10 @@
 
 
 /* ====================== Restaurant Listing ====================== */
+.inside #map {
+  height: 292px;
+}
+
 #restaurants-list {
   display: flex;
   flex-wrap: wrap;
@@ -33,3 +37,43 @@
 }
 
 /* ====================== Restaurant Details ====================== */
+#restaurant-container {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.restaurant-intro {
+  max-width: 800px;
+  margin: auto;
+}
+
+.restaurant-address,
+.restaurant-hours {
+  width: 50%;
+}
+
+tr:nth-child(odd) {
+  background-color: #ddd;
+}
+
+tr:nth-child(even) {
+  background-color: white;
+}
+
+#restaurant-container section:nth-child(2),
+#restaurant-container section:nth-child(3) {
+  padding: 1px 0 0 0;
+  background-color: white;
+}
+
+
+#restaurant-container section:nth-child(4) {
+  padding: 1px 0 0 0;
+  background-color: inherit;
+}
+
+#reviews-list li:nth-child(even) {
+  background-color: inherit;
+}
+
+
