--- a/css/styles.css
+++ b/css/styles.css
@@ -97,11 +97,13 @@ video {
 }
 
 #footer {
+  width: 100%;
+  min-width: 375px;
   background-color: #444;
   color: #aaa;
   font-size: 8pt;
   letter-spacing: 1px;
-  padding: 25px;
+  padding: 25px 0;
   text-align: center;
   text-transform: uppercase;
 }
