fix: Images takes the full width of its container
On the smaller resolution the restaurant image wouldn't take the full width of its container.

--- a/css/styles.css
+++ b/css/styles.css
@@ -221,6 +221,10 @@ nav h1 a {
   margin: 0 auto;
 }
 
+.restaurant-img {
+  width: 100%;
+}
+
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
