fix: Position the map correctly for 4K resolution
The map and the content would position in two columns for higher resolutions.

--- a/css/styles_large.css
+++ b/css/styles_large.css
@@ -10,6 +10,15 @@
   --restaurant-li-outer-margin: calc((100% - 3*var(--restaurant-li-width) - var(--restaurant-li-inner-gap)*2)/2);
 }
 
+/* ====================== General ====================== */
+#maincontent {
+  background-color: #f3f3f3;
+  min-height: 100%;
+  min-width: 320px;
+  display: block;
+  flex-wrap: nowrap;
+}
+
 /* ====================== Navigation ====================== */
 
 
