--- a/css/styles.css
+++ b/css/styles.css
@@ -201,6 +201,11 @@ nav h1 a {
   width: 200px;
 }
 
+#neighborhoods-select:focus,
+#cuisines-select:focus {
+  border: 3px solid #252831;
+}
+
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
   background-color: #f3f3f3;
@@ -251,14 +256,16 @@ nav h1 a {
 
 #restaurants-list li a {
   background-color: orange;
-  border-bottom: 3px solid #eee;
   color: #fff;
   display: inline-block;
   margin: 30px 0;
   padding: 13px 30px;
   text-align: center;
-  text-decoration: none;
   text-transform: uppercase;
+}
+
+#restaurants-list li a:focus {
+  border: 3px solid #252831;
 }
 
 /* ====================== Restaurant Details ====================== */
